package drinkshop.domain;

public enum CategorieBautura {
    CLASSIC_COFFEE,
    MILK_COFFEE,
    SPECIAL_COFFEE,
    ICED_COFFEE,
    TEA,
    BUBBLE_TEA,
    JUICE,
    SMOOTHIE,
    ALL
}