package drinkshop.service.validator;

import drinkshop.domain.Stoc;

public class StocValidator implements Validator<Stoc> {

    @Override
    public void validate(Stoc stoc) {

        String errors = "";

        if (stoc.getId() <= 0)
            errors += "ID invalid!\n";

        if (stoc.getIngredient() == null || stoc.getIngredient().isBlank())
            errors += "Ingredient invalid!\n";

        if (stoc.getCantitate() < 0)
            errors += "Cantitate negativa!\n";


        if (!errors.isEmpty())
            throw new ValidationException(errors);
    }
}