@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

' --- CLASE ȘI ENUMERĂRI ---
class AbstractRepository<ID, E>
enum CategorieBautura << enumeration >>
class CsvExporter
class DailyReportService
class DrinkShopApp
class DrinkShopController
class DrinkShopService
class FileAbstractRepository<ID, E>
class FileOrderRepository
class FileProductRepository
class FileRetetaRepository
class FileStocRepository
class IngredientReteta
class Order
class OrderItem
class OrderItemValidator
class OrderService
class OrderValidator
class Product
class ProductService
class ProductTest
class ProductValidator
class ReceiptGenerator
interface Repository<ID, E> << interface >>
class Reteta
class RetetaService
class RetetaValidator
class Stoc
class StocService
class StocValidator
enum TipBautura << enumeration >>
class ValidationException
interface Validator<T> << interface >>

' --- MOȘTENIRI ȘI IMPLEMENTĂRI REPO ---
AbstractRepository      -[#008200,dashed]-^  Repository
FileAbstractRepository  -[#000082,plain]-^  AbstractRepository
FileOrderRepository     -[#000082,plain]-^  FileAbstractRepository
FileProductRepository   -[#000082,plain]-^  FileAbstractRepository
FileRetetaRepository    -[#000082,plain]-^  FileAbstractRepository
FileStocRepository      -[#000082,plain]-^  FileAbstractRepository

' --- LOGICĂ ȘI SERVICII ---
DailyReportService     "1" *-[#595959,plain]-> "repo\n1" Repository
DrinkShopController    "1" *-[#595959,plain]-> "service\n1" DrinkShopService
DrinkShopService       "1" *-[#595959,plain]-> "report\n1" DailyReportService
DrinkShopService       "1" *-[#595959,plain]-> "orderService\n1" OrderService
DrinkShopService       "1" *-[#595959,plain]-> "productService\n1" ProductService
DrinkShopService       "1" *-[#595959,plain]-> "retetaService\n1" RetetaService
DrinkShopService       "1" *-[#595959,plain]-> "stocService\n1" StocService

' --- RELAȚII ÎNTRE ENTITĂȚI (CORECTATE) ---

' 1. Conectarea clasei Stoc (Problema 1)
Stoc "1" -- "1" IngredientReteta : monitorizează >

' 2. Legătura Product - Reteta (Problema 2)
Product "1" *-[#595959,plain]-> "reteta\n1" Reteta

' 3. Relații de compoziție existente
Order                  "1" *-[#595959,plain]-> "items\n*" OrderItem
OrderItem              "1" *-[#595959,plain]-> "product\n1" Product
Reteta                 "1" *-[#595959,plain]-> "ingrediente\n*" IngredientReteta
Product                "1" *-[#595959,plain]-> "categorie\n1" CategorieBautura
Product                "1" *-[#595959,plain]-> "tip\n1" TipBautura

' --- VALIDARE ȘI EXCEPȚII (CORECTATE) ---
Validator               <|.. ProductValidator
Validator               <|.. OrderValidator
Validator               <|.. OrderItemValidator
Validator               <|.. RetetaValidator
Validator               <|.. StocValidator
' 6. Legătura ValidationException (Problema 6)
Validator               ..> ValidationException : throws >

' --- ALTE DEPENDENȚE ---
OrderService           "1" *-[#595959,plain]-> "orderRepo\n1" Repository
ProductService         "1" *-[#595959,plain]-> "productRepo\n1" Repository
RetetaService          "1" *-[#595959,plain]-> "retetaRepo\n1" Repository
StocService            "1" *-[#595959,plain]-> "stocRepo\n1" Repository
FileOrderRepository    "1" *-[#595959,plain]-> "productRepository\n1" Repository
OrderValidator         "1" *-[#595959,plain]-> "itemValidator\n1" OrderItemValidator

@enduml